--- a/style.css
+++ b/style.css
@@ -3,3 +3,49 @@
     padding: 0;
     margin: 0;
 }
+
+.primary-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+header {
+    margin-bottom: 1000px;
+}
+
+.site-logo {
+    display: flex;
+    align-items: center;
+}
+
+.headshot {
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+.site-nav {
+    display: none;
+}
+
+.nav-item {
+    display: inline-block;
+}
+
+main {
+    padding: 80px 50px;
+}
+
+@media screen and (min-width: 1025px) {
+
+    /* Primary Nav */
+
+    .site-nav {
+        display: block;
+    }
+
+    .primary-nav {
+        display: flex;
+        column-gap: 20px;
+    }
+}
