--- a/style.css
+++ b/style.css
@@ -1,51 +1,143 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Nato Sans", sans-serif;
 }
 
 .primary-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+  display: flex;
+  align-items: center;
+  padding: 15px 30px;
+  min-height: 100px;
+  background-color: #1f1f1f;
+  border-bottom: solid 1px rgba(250, 250, 250, 0.2);
+}
+
+.header-inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 100px;
+  width: 100%;
+  height: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+body {
+  background-color: #1f1f1f;
+  color: #f5f5f5;
 }
 
 header {
-    margin-bottom: 1000px;
+  margin-bottom: 3000px;
 }
 
-.site-logo {
-    display: flex;
-    align-items: center;
+.logo-inner {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .headshot {
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  display: none;
+}
+
+.headshot {
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  width: 80px;
+  height: 80px;
+}
+
+.site-name {
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 4px;
 }
 
 .site-nav {
-    display: none;
+  display: none;
+  white-space: nowrap;
 }
 
 .nav-item {
-    display: inline-block;
+  display: inline-block;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav-item a,
+.site-logo,
+.primary-nav-cta-btn {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.nav-item a:hover {
+  color: #22e52e;
+}
+
+.primary-header .cta {
+  display: none;
+  margin-left: auto;
+}
+
+.primary-nav-cta-btn {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  color: #22e52e;
+  border: solid 2px #22e52e;
+  background-color: #1f1f1f;
+  border-radius: 50px;
+  padding: 10px 20px;
+}
+
+.primary-nav-cta-btn:hover {
+  color: #262626;
+  background-color: #22e52e;
 }
 
 main {
-    padding: 80px 50px;
+  padding: 80px 50px;
+}
+
+@media screen and (min-width: 500px) {
+  .headshot {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .primary-header {
+    padding: 15px 50px;
+  }
+  .primary-header .cta {
+    display: block;
+  }
 }
 
 @media screen and (min-width: 1025px) {
+  /* Primary Nav */
 
-    /* Primary Nav */
+  .site-nav {
+    display: block;
+  }
 
-    .site-nav {
-        display: block;
-    }
+  .primary-nav {
+    display: flex;
+    column-gap: 30px;
+  }
 
-    .primary-nav {
-        display: flex;
-        column-gap: 20px;
-    }
+  .primary-nav-cta-btn {
+    padding: 15px 30px;
+  }
 }
