--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   font-family: "Nato Sans", sans-serif;
 }
 
+/* Header */
+
 .primary-header {
   display: flex;
   align-items: center;
@@ -19,21 +21,18 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 100px;
+  gap: 20px;
   width: 100%;
   height: 100%;
   max-width: 1600px;
   margin: 0 auto;
 }
 
-body {
-  background-color: #1f1f1f;
-  color: #f5f5f5;
-}
-
 header {
   margin-bottom: 3000px;
 }
+
+/* Headshot/Logo and Site Name */
 
 .logo-inner {
   display: flex;
@@ -56,7 +55,10 @@ header {
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 4px;
+  width: 30%;
 }
+
+/* Primary Nav */
 
 .site-nav {
   display: none;
@@ -83,9 +85,49 @@ header {
   color: #22e52e;
 }
 
-.primary-header .cta {
+/* Primary Nav - Mobile Menu Burger */
+
+.mobile-menu {
   display: none;
   margin-left: auto;
+}
+
+.mobile-menu-burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.mobile-menu-burger .top-bar,
+.mobile-menu-burger .middle-bar,
+.mobile-menu-burger .bottom-bar {
+  height: 3px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  transition: 0.4s;
+}
+
+.mobile-menu-burger .top-bar {
+  width: 40px;
+}
+
+.mobile-menu-burger .middle-bar {
+  width: 30px;
+}
+
+.mobile-menu-burger .bottom-bar {
+  width: 20px;
+}
+
+/* Primary Nav - Full Screen Mobile Menu */
+
+.primary-header .header-inner 
+
+/* Primary Nav - CTA Button */
+
+.primary-header .cta {
+  display: none;
 }
 
 .primary-nav-cta-btn {
@@ -106,23 +148,46 @@ header {
   background-color: #22e52e;
 }
 
+/* Body */
+
+body {
+  background-color: #1f1f1f;
+  color: #f5f5f5;
+}
+
 main {
   padding: 80px 50px;
 }
 
+/* Media Queries */
+
 @media screen and (min-width: 500px) {
+  /* Headshot/Logo and Site Name */
   .headshot {
     display: block;
   }
 }
 
 @media screen and (min-width: 768px) {
+  /* Primary Header */
   .primary-header {
     padding: 15px 50px;
   }
   .primary-header .cta {
     display: block;
   }
+}
+
+@media screen and (max-width: 1024px) {
+    
+    .mobile-menu {
+        display: block;
+        margin-left: auto;
+    }
+
+    .primary-header .header-inner .cta {
+        margin-left: 0;
+      }
 }
 
 @media screen and (min-width: 1025px) {
@@ -139,5 +204,9 @@ main {
 
   .primary-nav-cta-btn {
     padding: 15px 30px;
+  }
+
+  .primary-header .header-inner .cta {
+    margin-left: auto;
   }
 }
