--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ header {
 /* Primary Nav */
 
 .site-nav {
-  display: none;
   white-space: nowrap;
 }
 
@@ -127,7 +126,7 @@ header {
 
 /* Primary Nav - Mobile Menu Nav Items */
 
-.primary-header .header-inner .mobile-menu .mobile-menu-nav-items {
+.primary-header .header-inner .mobile-menu .mobile-menu-nav .mobile-menu-nav-items {
   display: none;
   position: absolute;
   top: 0;
@@ -142,28 +141,32 @@ header {
   padding: 50px 30px;
 }
 
-.mobile-menu-nav-items .site-nav .primary-nav {
+.mobile-menu-nav .mobile-menu-nav-items .mobile-menu-nav-list-items {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-.mobile-menu-nav-items .site-nav .primary-nav .nav-item a {
+.mobile-menu-nav .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a {
   color: #292929;
 }
 
-.mobile-menu-nav-items .site-nav .primary-nav .nav-item a:hover,
-.mobile-menu-nav-items .mobile-close-btn .close-btn:hover .fa-solid.fa-xmark {
+.mobile-menu-nav .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a:hover,
+.mobile-menu-nav .mobile-menu-nav-items .close-btn:hover .fa-solid.fa-xmark {
   color: #ffffff;
 }
 
-.mobile-menu-nav-items .site-nav {
+.mobile-menu-nav-items .mobile-menu-nav-list-items {
   margin-top: 80px;
 }
 
 /* Primary Nav - Mobile Close Button */
 
-.mobile-menu-nav-items .mobile-close-btn .close-btn {
+.mobile-close-btn {
+  display: none;
+}
+
+.mobile-menu-nav-items .close-btn {
   position: absolute;
   top: 30px;
   right: 30px;
@@ -217,7 +220,7 @@ main {
 
 @media screen and (min-width: 350px) {
   /* Primary Menu - Nav Items */
-  .mobile-menu-nav-items .site-nav .primary-nav .nav-item a {
+  .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a {
     font-size: 1.5rem;
   }
 }
@@ -228,7 +231,7 @@ main {
     display: block;
   }
   /* Primary Menu - Nav Items */
-  .mobile-menu-nav-items .site-nav .primary-nav .nav-item a {
+  .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a {
     font-size: 2rem;
   }
 }
@@ -245,11 +248,11 @@ main {
     padding: 80px 50px;
   }
   /* Primary Menu - Nav Items */
-  .mobile-menu-nav-items .site-nav .primary-nav .nav-item a {
+  .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a {
     font-size: 3rem;
   }
   /* Primary Menu - Mobile Nav Close Button */
-  .mobile-menu-nav-items .mobile-close-btn .close-btn {
+  .mobile-menu-nav-items .close-btn {
     top: 50px;
     right: 50px;
   }
@@ -260,7 +263,7 @@ main {
 
 @media screen and (min-width: 880px) {
   /* Primary Menu - Nav Items */
-  .mobile-menu-nav-items .site-nav .primary-nav .nav-item a {
+  .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a {
     font-size: 4rem;
   }
 }
@@ -274,14 +277,13 @@ main {
   .primary-header .header-inner .cta {
     margin-left: 0;
   }
+  .site-nav {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1025px) {
   /* Primary Nav */
-
-  .site-nav {
-    display: block;
-  }
 
   .primary-nav {
     display: flex;
@@ -294,11 +296,5 @@ main {
 
   .primary-header .header-inner .cta {
     margin-left: auto;
-  }
-
-  /* Primary Nav - CTA Menu Item */
-
-  .menu-cta {
-    display: none;
   }
 }
