--- a/style.css
+++ b/style.css
@@ -124,6 +124,13 @@ header {
   width: 20px;
 }
 
+.mobile-menu-burger:hover .top-bar,
+.mobile-menu-burger:hover .middle-bar,
+.mobile-menu-burger:hover .bottom-bar {
+  background-color: #22e52e;
+  width: 40px;
+}
+
 /* Primary Nav - Mobile Menu Nav Items */
 
 .primary-header .header-inner .mobile-menu .mobile-menu-nav .mobile-menu-nav-items {
@@ -134,11 +141,13 @@ header {
   width: 100%;
   height: 100%;
   background-color: #22e52e;
+  padding: 50px 30px;
+  transition: top 0.5s;
   z-index: 999999;
 }
 
-.mobile-menu-nav-items {
-  padding: 50px 30px;
+.mobile-menu-nav-items.active {
+  top: 0;
 }
 
 .mobile-menu-nav .mobile-menu-nav-items .mobile-menu-nav-list-items {
