--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@
   margin: 0 auto;
 }
 
-header {
-  margin-bottom: 3000px;
-}
-
 /* Headshot/Logo and Site Name */
 
 .logo-inner {
@@ -221,8 +217,14 @@ body {
   color: #f5f5f5;
 }
 
-main {
-  padding: 80px 50px;
+section, footer {
+    padding: 50px 30px;
+}
+
+.max-width {
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 /* Media Queries */
