--- a/style.css
+++ b/style.css
@@ -5,15 +5,22 @@
   font-family: "Nato Sans", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Header */
 
 .primary-header {
+  position: sticky;
+  top: 0;
   display: flex;
   align-items: center;
   padding: 15px 30px;
   min-height: 100px;
   background-color: #1f1f1f;
   border-bottom: solid 1px rgba(250, 250, 250, 0.2);
+  z-index: 100;
 }
 
 .header-inner {
@@ -135,9 +142,10 @@
 
 .primary-header .header-inner .mobile-menu .mobile-menu-nav .mobile-menu-nav-items {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   background-color: #22e52e;
@@ -232,8 +240,25 @@ footer {
   padding: 50px 30px;
 }
 
+.image-separator {
+  padding: 0 0 0 30px;
+}
+
 .inner-container {
   position: relative;
+}
+
+.custom-list li {
+  list-style-type: none;
+  line-height: 1.5em;
+}
+
+.custom-list li:not(:last-child) {
+  padding-bottom: 30px;
+}
+
+.skills-list .custom-list li {
+  font-size: 1rem;
 }
 
 /* Layout */
@@ -248,17 +273,52 @@ footer {
   flex-direction: row;
 }
 
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.skills-list {
+  flex-wrap: wrap;
+}
+
+.large-gap {
+  gap: 50px;
+}
+
 .max-width {
   width: 100%;
   max-width: 1600px;
   margin: 0 auto;
 }
 
+.medium-width {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 /* Text */
 
-p {
+p, li {
   font-size: 1rem;
   letter-spacing: 2px;
+}
+
+.green-accent {
+  color: #22E52E;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
+.primary-h2 {
+  font-size: 1.5rem;
+}
+
+.skills .primary-h2 {
+  padding-bottom: 30px;
 }
 
 /* Outline Heading */
@@ -266,7 +326,7 @@ p {
 .outline-heading-large {
   font-size: 1.5rem;
   -webkit-text-stroke-width: 0;
-  -wekkit-text-stroke-color: transparent;
+  -webkit-text-stroke-color: transparent;
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -302,21 +362,40 @@ p {
 /* Location */
 
 .location p {
-  font-size: 0.875rem;
+  font-size: 0.6rem;
   font-weight: 200;
   color: rgba(245, 245, 245, 0.5);
   white-space: nowrap;
 }
 
+/* Image Separator */
+
+.image-separator {
+  margin-bottom: 15px;
+}
+
 /* Job Titles */
 
-.job-titles .inner-container .job-titles.bg {
-  background-image: url(./images/business-strategy.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.image-separator .inner-container {
+  width: 70%;
+  margin-left: auto;
+}
+
+.image-separator .inner-container .image-separator-bg img {
   width: 100%;
   height: auto;
+}
+
+.image-separator-bg:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: -20px;
+  width: 100%;
+  height: calc(100% - 10px);
+  border: solid 1px #22E52E;
+  z-index: -1;
 }
 
 /* Media Queries */
@@ -333,12 +412,15 @@ p {
     -webkit-text-stroke-color: #ffffff;
     color: transparent;
   }
+  .primary-h2 {
+    font-size: 2rem;
+  }
 }
 
 @media screen and (min-width: 400px) {
   /* Vertical Text */
   .vertical {
-    display: block;
+    display: flex;
   }
 }
 
@@ -364,19 +446,33 @@ p {
   .outline-heading-large {
     font-size: 3rem;
   }
-}
-
-@media screen and (max-width: 641px) {
-    /* Vertical Text */
-    .vertical {
-      bottom: -50px;
-    }
+  .primary-h2 {
+    font-size: 2.5rem;
+  }
+  .skills-list .custom-list li {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (min-width: 641px) {
   /* Outline Heading */
   .outline-heading-large {
     font-size: 4rem;
+  }
+  .primary-h2 {
+    font-size: 3rem;
+  }
+  .location p {
+    font-size: 0.875rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .flex-column-mobile {
+    flex-direction: column;
+  }
+  .skills .large-gap {
+    gap: 0;
   }
 }
 
@@ -389,7 +485,7 @@ p {
     display: block;
   }
   .mobile-menu-nav-items {
-    padding: 80px 50px;
+    padding: 50px 50px;
   }
   /* Primary Menu - Nav Items */
   .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a {
@@ -403,14 +499,33 @@ p {
   .fa-solid.fa-xmark {
     font-size: 40px;
   }
+
+  p, li {
+    font-size: 1.2rem;
+  }
+
   section,
   footer,
   .primary-header .header-inner .mobile-menu .mobile-menu-nav .mobile-menu-nav-items {
     padding: 80px 50px;
   }
+
+  .image-separator {
+    padding: 0 0 0 50px;
+  }
+
   /* Outline Heading */
   .outline-heading-large {
     font-size: 5rem;
+  }
+  .primary-h2 {
+    font-size: 3.5rem;
+  }
+  .skills .primary-h2 {
+    padding-bottom: 0;
+  }
+  .skills .inner-container.large-gap {
+    gap: 120px
   }
 }
 
@@ -419,6 +534,12 @@ p {
   .mobile-menu-nav-items .mobile-menu-nav-list-items .nav-item a,
   .outline-heading-large {
     font-size: 6rem;
+  }
+  .primary-h2 {
+    font-size: 4rem;
+  }
+  .skills-list .custom-list li {
+    font-size: 1.4rem;
   }
 }
 
@@ -455,11 +576,27 @@ p {
   .outline-heading-large {
     font-size: 7rem;
   }
+  .primary-h2 {
+    font-size: 4.5rem;
+  }
+  section, 
+  footer {
+    padding: 120px 50px;
+  }
+  .skills-list .custom-list li {
+    font-size: 1.5rem;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   /* Outline Heading */
   .outline-heading-large {
     font-size: 8rem;
+  }
+  .skills-list .custom-list li {
+    font-size: 1.75rem;
+  }
+  .skills-list {
+    flex-wrap: nowrap;
   }
 }
